--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <ul>
             <li class="reaction">
             <span class="pics1">
-            <img src="../assets/images/icon-reaction.svg"  >
+            <img src="./assets/images/icon-reaction.svg"  >
             <span>Reaction</span>
             </span>
               <span class="score">80</span>
@@ -51,7 +51,7 @@
 
             <li class="memory">
               <span class="pics2">
-                <img src="../assets/images/icon-memory.svg" >
+                <img src="./assets/images/icon-memory.svg" >
                 <span>Memory</span>
               </span>
               <span class="score">92</span>
@@ -60,7 +60,7 @@
 
             <li class="verbal">
               <span class="pics3">
-                <img src="../assets/images/icon-verbal.svg">
+                <img src="./assets/images/icon-verbal.svg">
                 <span>Verbal</span>
               </span>
               <span class="score">61</span>
@@ -69,7 +69,7 @@
 
             <li class="visual">
               <span class="pics4">
-                <img src="../assets/images/icon-visual.svg">
+                <img src="./assets/images/icon-visual.svg">
                 <span>Visual</span>
               </span>
               <span class="score">72</span>
